--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     <main>
     <section class="lead">
-      <h1 class="lead__title">Путешествия по России</h1>
+      <h1 class="lead__title">Путешествия по РОССИИ</h1>
       <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
       <figure class="lead__figure">
         <img class="lead__image" src="./images/lead-polka.jpg" alt="Боковая полка">
